# openchat

./: .gitignore  Makefile  README.md  SECURITY.md  docker-compose.yml  mcq_eval_result_openchat.json  mcq_eval_result_openchat2w.json  mcq_eval_result_openchatv2en.json  mcq_eval_result_openorca.json  pyproject.toml  pytest.ini  requirements.txt  run.sh
.github/workflows/: docker_build_and_push.yaml  pypi_publish.yaml
docker/: Dockerfile  requirements.txt
docker/serving/: Dockerfile  start.sh
ochat/: __init__.py
ochat/config/: __init__.py  conversation_template.py  model_config.py
ochat/data/: clean_sharegpt.py  conversation_to_text.py  filter_language.py  filter_sharegpt.py  generate_dataset.py  generate_dataset_discernia.py  generate_dataset_orca.py  merge.py  process_multimodal_data.py  run_data_pipeline.sh  unwanted_words.py
ochat/evaluation/: README.md  compare_answer.py  conv_eval.py  conversation_templates.py  convert_to_evalplus.py  eval_mcq_api.py  eval_mcq_batch.py  evalplus_codegen.py  get_api_answer.py  get_model_answer.py  get_openai_answer.py  match_answer.py  openai_eval.py  run_eval.py  view_mcq_results.py  view_results.py
ochat/evaluation/eval_data/fs_cothub/bbh/: boolean_expressions.jsonl  (+26 more)
ochat/evaluation/grading/: math_grader.py  math_normalize.py
ochat/evaluation/mcq_set/agieval/: aqua-rat.zero-shot.jsonl  logiqa-en.zero-shot.jsonl  lsat-ar.zero-shot.jsonl  lsat-lr.zero-shot.jsonl  lsat-rc.zero-shot.jsonl  sat-en-without-passage.zero-shot.jsonl  sat-en.zero-shot.jsonl  sat-math.zero-shot.jsonl
ochat/evaluation/mcq_set/bbh/: date_understanding.jsonl  disambiguation_qa.jsonl  geometric_shapes.jsonl  hyperbaton.jsonl  logical_deduction_five_objects.jsonl  logical_deduction_seven_objects.jsonl  logical_deduction_three_objects.jsonl  movie_recommendation.jsonl  penguins_in_a_table.jsonl  reasoning_about_colored_objects.jsonl  ruin_names.jsonl  salient_translation_error_detection.jsonl  snarks.jsonl  temporal_sequences.jsonl  tracking_shuffled_objects_five_objects.jsonl  tracking_shuffled_objects_seven_objects.jsonl  tracking_shuffled_objects_three_objects.jsonl
ochat/evaluation/mcq_set/openchat_bbh/: boolean_expressions.jsonl  causal_judgment.jsonl  disambiguation_qa.jsonl  logical_deduction___seven_objects.jsonl  logical_deduction_five_objects.jsonl  logical_deduction_three_objects.jsonl  movie_recommendation.jsonl  salient_translation_error_detection.jsonl  snarks.jsonl  temporal_sequences.jsonl  tracking_shuffled_objects_seven_objects.jsonl  tracking_shuffled_objects_three_objects.jsonl  web_of_lies.jsonl
ochat/evaluation/mcq_set/truthfulqa_orca/: truthfulqa_mc.jsonl
ochat/evaluation/vicuna/: prompt.jsonl  question.jsonl  reviewer.jsonl
ochat/evaluation/vicuna_gpt3.5eval/: prompt.jsonl  reviewer.jsonl
ochat/experimental/: generate_dataset_old.py  sharegpt.ipynb  test_ffd_sampler.ipynb  test_multipack_dataloader.ipynb  text_length.ipynb  verify_dataset.ipynb  verify_dataset_discernia.ipynb  verify_dataset_orca.ipynb
ochat/models/: __init__.py  gpt_bigcode.py  llama.py  losses.py  unpadded_gemma.py  unpadded_llama.py  unpadded_mistral.py
ochat/old_training/: fsdp_config.json  training_10ep.sh
ochat/patches/: apply.py  llama_attn_monkey_patch.py  starcoder_attn_monkey_patch.py
ochat/scripts/: convert_llama_weights_to_hf_add_tokens.py  hf_add_tokens.py  init_special_embedding_llama3.py  llama_convert_and_add_eot_token.py  mistral_add_tokens.py  modify_eos_embedding.py  starcoder_add_eot_token.py
ochat/serving/: async_tokenizer.py  inference.py  openai_api_protocol.py  openai_api_server.py
ochat/tests/: test_model_config.py
ochat/training/: run_training.sh  train.py  train_mem.py
ochat/training_deepspeed/: deepspeed_config.json  deepspeed_config_zero3.json  ffd_sampler.py  hf_hub.py  llama_attn_monkey_patch.py  multipack_dataloader.py  multipack_sampler.py  numpy_dataset.py  openchat_dataset.py  parquet_dataset.py  run_training_deepspeed.sh  run_training_discernia.sh  starcoder_attn_monkey_patch.py  train.py  train_mem.py  train_zero3.py
ochat/visualization/: dim_reduction.ipynb  openai_embedding.py
ochat/visualization/eval_result_ui/: eval_result_visualizer.html
ochat/visualization/ui/: example.visualizer.json  visualizer.html
(+70 files in other folders)
