[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ochat"
description = "An efficient framework for training and serving top-tier, open-source conversational LLMs."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "beautifulsoup4", 
    "markdownify", 
    "openai", 
    "tenacity", 
    "tiktoken", 
    "tqdm", 
    "wandb", 
    "numba", 
    "datasets", 
    "orjson", 
    "torch", 
    "ray", 
    "sentencepiece", 
    "transformers>=4.38.2", 
    "accelerate", 
    "protobuf",
    "fastapi", 
    "pydantic", 
    "shortuuid", 
    "uvicorn", 
    "vllm>=0.3.3",
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/imoneoi/openchat"
"Bug Tracker" = "https://github.com/imoneoi/openchat/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "ochat/experimental*"]

[tool.wheel]
exclude = ["assets*", "ochat/experimental*"]

[tool.setuptools_scm]

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823"]
select = ["C", "E", "F", "I", "W"]
line-length = 118

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"src/diffusers/utils/dummy_*.py" = ["F401"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"