[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ochat"
description = "An efficient framework for training and serving top-tier, open-source conversational LLMs."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "beautifulsoup4", 
    "markdownify", 
    "pylatexenc",
    "openai==0.28.1",
    "tenacity", 
    "tiktoken", 
    "tqdm", 
    "wandb", 
    "numba", 
    "datasets", 
    "orjson", 
    "torch==2.1.2", 
    "packaging",
    "ninja",
    "flash-attn",
    "ray", 
    "sentencepiece", 
    "transformers==4.40.0", 
    "accelerate", 
    "protobuf",
    "fastapi", 
    "pydantic", 
    "shortuuid", 
    "uvicorn", 
    "vllm==0.4.0.post1",
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/imoneoi/openchat"
"Bug Tracker" = "https://github.com/imoneoi/openchat/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "ochat/experimental*"]

[tool.wheel]
exclude = ["assets*", "ochat/experimental*"]

[tool.setuptools_scm]